# fix-my-claw

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_ZH.md  SECURITY.md  pyproject.toml
deploy/systemd/: fix-my-claw-oneshot.service  fix-my-claw.service  fix-my-claw.timer
examples/: fix-my-claw.toml
src/fix_my_claw/: cli.py  config.py  core.py  lock.py  logging_setup.py  openclaw.py  proc.py  repair.py  state.py  util.py  watchdog.py
src/fix_my_claw/prompts/: repair.md  repair_code.md
tests/: test_smoke.py
