[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fix-my-claw"
version = "0.1.0"
description = "24/7 OpenClaw watchdog: probe health/status, run official repairs, then (optionally) AI-assisted repair via Codex/Claude Code."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "fix-my-claw contributors" }]
keywords = ["openclaw", "watchdog", "monitoring", "self-heal", "codex", "claude"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
]
dependencies = [
  "tomli; python_version < '3.11'",
]

[project.scripts]
fix-my-claw = "fix_my_claw.core:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
fix_my_claw = ["prompts/*.md"]
